--- a/pr1/WebContent/module2/2.html
+++ b/pr1/WebContent/module2/2.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Test2</title>
 </head>
 <body>
-<h1>Test1</h1>h1>
+
 </body>
 </html>
